--- a/404.md
+++ b/404.md
@@ -2,10 +2,11 @@
 permalink: /404.html
 ---
 <p align="center">
-  <b>Some Links:</b><br>
-  <a href="#">Link 1</a> |
-  <a href="#">Link 2</a> |
-  <a href="#">Link 3</a>
-  <br><br>
-  <img src="http://s.4cdn.org/image/title/105.gif">
+  <br>
+  ### 404
+  <br>
+  <b> It seems like this page doesn't exist... yet?<b><br>
+  <b>Here's a link back home</b><br>
+  <a href="https://leveloneadventure.me/">Home</a>
+  
 </p>
