--- a/404.md
+++ b/404.md
@@ -3,7 +3,8 @@ permalink: /404.html
 ---
 <p align="center">
   <br>
-  ### 404
+  <font size=20>404</font>
+  <br>
   <br>
   <b> It seems like this page doesn't exist... yet?<b><br>
   <b>Here's a link back home</b><br>
