--- a/404.md
+++ b/404.md
@@ -3,7 +3,7 @@ permalink: /404.html
 ---
 <p align="center">
   <br>
-  <font size=20>404</font>
+  <img src="https://objectstorage.ap-seoul-1.oraclecloud.com/n/cn0yxy9huccd/b/helianthus/o/Images%2F404.png">
   <br>
   <br>
   <b> It seems like this page doesn't exist... yet?<b><br>
