--- a/404.md
+++ b/404.md
@@ -7,7 +7,7 @@ permalink: /404.html
   <br>
   <br>
   <b> It seems like this page doesn't exist... yet?<b><br>
-  <b>Here's a link back home</b><br>
-  <a href="https://leveloneadventure.me/">Home</a>
+  <b><a href="https://leveloneadventure.me/">Let's go back home.</a></b><br>
+  
   
 </p>
